UHF-1862: UHF-3220: Fix input border-radius on ios

--- a/src/scss/components/paragraphs/_unit-search.scss
+++ b/src/scss/components/paragraphs/_unit-search.scss
@@ -85,6 +85,7 @@
       }
 
       .hds-text-input__input {
+        border-radius: 0;
         padding-right: $spacing-triple;
       }
     }
